# ComfyUI-GRAG-ArchAi3D

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  READY_FOR_GITHUB.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish_to_registry.yml
core/: __init__.py  adaptive_control.py  attention_v3.py  multi_resolution.py  per_layer_control.py  preset_loader.py
docs/: QUICK_START.md  SIMPLE_VS_UNIFIED.md  STRENGTH_SLIDER_EXPLAINED.md
nodes/: __init__.py  grag_advanced_sampler.py  grag_preset_manager.py  grag_simple_controller.py  grag_unified_controller.py
presets/: paper_stable.yaml  v221_experimental.yaml
